Base do Footer - Concluída

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="content">
     <header>
-      <a href="index.html"> <img src="./assets/img/logo.svg" alt="logo do site"></a>
+      <a href="index.html"> <img src="./assets/img/logo.svg" alt="store logo"></a>
       <nav class="navegation-bar">
         <ul>
           <li><a href="">TODOS OS PRODUTOS</a></li>
@@ -54,21 +54,21 @@
               </div>
             </div>
             <div class="product-card">
-              <a href=""><img src="./assets/img/salto-01.png" alt=""></a>
+              <a href=""><img src="./assets/img/salto-02.png" alt=""></a>
               <div class="product-description">
                 <p>SCARPIN SALTO FINO BÁSICO</p>
                 <p>R$140,00 </p>
               </div>
             </div>
             <div class="product-card">
-              <a href=""><img src="./assets/img/salto-01.png" alt=""></a>
+              <a href=""><img src="./assets/img/salto-03.png" alt=""></a>
               <div class="product-description">
                 <p>SCARPIN SALTO FINO BÁSICO</p>
                 <p>R$140,00 </p>
               </div>
             </div>
             <div class="product-card">
-              <a href=""><img src="./assets/img/salto-01.png" alt=""></a>
+              <a href=""><img src="./assets/img/salto-04.png" alt=""></a>
               <div class="product-description">
                 <p>SANDÁLIA SALTO FINO </p>
                 <p>R$159,00</p>
@@ -96,7 +96,32 @@
   
     </main>
     <footer>
+      <div class="logo-box">
+        <a href=""><img src="./assets/img/logo-footer.svg" alt="store logo"></a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+      </div>
       
+      <div class="categories">
+        <h3>categorias</h3>
+        <ul>
+          <li><a href="">sandálias</a></li>
+          <li><a href="">botas</a></li>
+          <li><a href="">tênis</a></li>
+          <li><a href="">oxford</a></li>
+          <li><a href="">coturnos</a></li> 
+        </ul>
+      </div>
+      <div class="institutional">
+        <h3>institucional</h3>
+        <ul>
+          <li><a href="">sobre nós</a></li>
+          <li><a href="">perguntas frequentes</a></li>
+          <li><a href="">politica de privacidade</a></li>
+          <li><a href="">rastreamento de pedidos</a></li>
+          <li><a href="">trabalhe conosco</a></li>
+          <li><a href="">contato</a></li> 
+        </ul>
+      </div>
     </footer>
   </div>
 </body>
