--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <article class="promotion">
           <h2>30% OFF</h2>
-          <div class="promotion-card-box">
+          <div class="promotion-cards-box">
             <div class="product-card">
               <a href=""><img src="./assets/img/salto-01.png" alt=""></a>
               <div class="product-description">
@@ -84,7 +84,8 @@
             </h2>
   
             <div class="see-details">
-              <p>ver detalhes</p>
+              <a href=""><p>ver detalhes</p></a>
+              
             </div>
 
             <img src="./assets/img/sandalia-01.png" alt="image of the sandal on the model's foot">
