Inserting whatsapp square

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -98,8 +98,10 @@
             
           </div>
         </form>
-
       </section>
+      <div class="whatsapp-square">
+          
+      </div>
   
   
     </main>
