--- a/work-with-us.html
+++ b/work-with-us.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/work-with-us.css">
-  <title>Trabalhe Conosco</title>
+  <title>DH-Shoes Store - Trabalhe Conosco</title>
 </head>
 <body>
   <div class="content">
