add required atributte in textarea

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -82,7 +82,7 @@
 
             <div class="msg-box">
               <label for="msg">Mensagem</label>
-              <textarea name="msg" id="msg" cols="30" rows="10"></textarea>
+              <textarea name="msg" id="msg" cols="30" rows="10" required></textarea>
             </div>
             
 
