Inserting position:fixed in whatsapp square

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -99,9 +99,12 @@
           </div>
         </form>
       </section>
-      <div class="whatsapp-square">
+      <div class="whatsapp-square-box">
+        <div class="whatsapp-square">
           <a href="https://api.whatsapp.com/send?phone=5511888888888&text=Compre%20na%20DH%20Store" target="_blank"></a>
+        </div>
       </div>
+      
   
   
     </main>
